feat(protocol): migrate kotlin-compiler to the unified wire
- KotlinCompilerPlugin: CompileSpec.from(PluginSpec) reads jvmTarget/moduleName/
  languageVersion/apiVersion via config, output/workdir/snapshotDir via layout,
  sources via source lines, classpath via cp(compile), friend paths via
  cp(friend), extra args via arg lines, and typed compiler plugins via
  compiler-plugin lines. Diagnostics/result/done via PluginReply (KcProtocol).
- KotlincDriver writes the NDJSON spec via SpecWriter (both the compile spec and
  the AOT-trainer spec) and parses diagnostic/result by PluginProtocol constants.
- Retire the last "Worker" names in this path: WorkerLogger -> KcLogger,
  KotlinWorkerSetup -> KotlinPluginSetup.

Verified: kotlin-compiler (CompileSpecTest rewritten to NDJSON) + engine kotlin
tests + full compile green. Needs e2e for a real kotlinc compile.